--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,8 @@
         "vec4ub": "cpp",
         "vec4ui": "cpp",
         "vec4us": "cpp",
-        "viewport": "cpp"
+        "viewport": "cpp",
+        "random": "cpp",
+        "algorithm": "cpp"
     }
 }
